--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,7 +1,7 @@
-dataSource.driverClassName=org.hsqldb.jdbcDriver
-dataSource.url=jdbc:hsqldb:mem:test
-dataSource.username=sa
-dataSource.password=
+dataSource.driverClassName=com.mysql.jdbc.Driver
+dataSource.url=jdbc:mysql://email.cta0gxd6pocj.us-west-2.rds.amazonaws.com:3306/LLVM
+dataSource.username=email
+dataSource.password=Happy1030
 
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=create
