--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
+        <dependency>
+	        <groupId>javax.ws.rs</groupId>
+	        <artifactId>javax.ws.rs-api</artifactId>
+	        <version>2.0.1</version>
+        </dependency>
         <!-- Servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
