--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>3.0.13.Final</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-spring</artifactId>
+	        <version>3.0.13.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
