--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
 	        <artifactId>resteasy-spring</artifactId>
 	        <version>3.0.13.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-servlet-initializer</artifactId>
+        <version>3.0.13.Final</version>
+</dependency>
     </dependencies>
     <build>
         <plugins>
